# kaagleease

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  KT_HANDBOOK.md  README.md  demo.ipynb  diagnose_api.py  final_proof.py  kaggleease_masterclass.ipynb  pyproject.toml  pytest_log.txt  pytest_log_10.txt  pytest_log_11_utf8.txt  pytest_log_12.txt  pytest_log_12_utf8.txt  pytest_log_2_utf8.txt  pytest_log_3.txt  pytest_log_3_utf8.txt  pytest_log_4.txt  pytest_log_5.txt  pytest_log_8_utf8.txt  pytest_log_9.txt  run_verify.py
.github/workflows/: ci.yml
dist_pkg/: CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  LICENSE  PUBLISH.md  README.md  pyproject.toml
dist_pkg/kaggleease/: __init__.py  auth.py  cli.py  client.py  errors.py  load.py  magics.py  progress.py  search.py
dist_pkg/kaggleease.egg-info/: PKG-INFO
kaggleease/: auth.py  client.py  errors.py  load.py  magics.py  progress.py
kaggleease.egg-info/: PKG-INFO
logs/: pip_error.txt  pip_error_utf8.txt  pytest_log_10_utf8.txt  pytest_log_11.txt  pytest_log_2.txt  pytest_log_4_utf8.txt  pytest_log_5_utf8.txt  pytest_log_6.txt  pytest_log_6_utf8.txt  pytest_log_7.txt  pytest_log_7_utf8.txt  pytest_log_8.txt  pytest_log_9_utf8.txt  pytest_log_utf8.txt
tests/: conftest.py  test_basic.py  test_errors.py  test_magics.py
