[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaggleease"
description = "The fastest, notebook-first way to load Kaggle datasets into pandas with one line."
readme = "README.md"
license = "MIT"
authors = [
    {name = "KaggleEase Contributors"}
]
keywords = ["kaggle", "pandas", "data-loading", "machine-learning", "notebook", "utility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "click>=7.0",
    "ipython>=7.0.0",
    "kagglehub>=0.1.0",
    "pandas>=1.0.0",
    "pyarrow>=1.0.0",
    "requests>=2.25.0",
    "psutil>=5.0.0",
    "openpyxl>=3.0.0",
]
version = "1.3.10"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
]

[project.urls]
Homepage = "https://github.com/Dinesh-raya/kaagleease"
Repository = "https://github.com/Dinesh-raya/kaagleease"
Documentation = "https://github.com/Dinesh-raya/kaagleease#readme"

[project.scripts]
kaggleease = "kaggleease.cli:cli"



[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
[tool.setuptools.packages.find]
include = ["kaggleease*"]
exclude = ["dist_pkg*", "tests*", "logs*"]
